--- a/reconstruction.ipynb
+++ b/reconstruction.ipynb
@@ -467,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "style",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
